--- a/知识/科学上网.md
+++ b/知识/科学上网.md
@@ -2,3 +2,10 @@
 ## vpn
 
 v2rayU
+
+- [https://agentneo.tech/](https://agentneo.tech/)
+- [https://bywave.io/cart.php](https://bywave.io/cart.php)
+- [Releases · yichengchen/clashX · GitHub](https://github.com/yichengchen/clashX/releases)
+- 
+
+
