--- a/知识/英语单词.md
+++ b/知识/英语单词.md
@@ -11,13 +11,36 @@
 - References
 	- 引用
 - Arithmetic
-	- 计算
+	- 计算，算数的
 - Comparison
 - presets
 	- 预设 
 - polyfill
 	- 垫片
-- 
+- fallback
+	- 应急计划 一般指 plan B
+	-   What's our fallback if they don't come up with the money? 要是他们拿不出钱，我们如何应变？
+- expires
+	- 期限 cookie 的过期时间等
+- Secure
+- patch
+	- 补丁
+- integrate
+	- 继承 
+	- 持续继承持续部署  cicd
+- Opinionated
+	- 固执的-
+	- 提供好的 不允许修改的
+-  Purpose
+	- 目的
+- Patterns
+	- 模式
+- * *
+
+	
+
+
+
 
 
 ### 月份
