--- a/date/2022-02-07.md
+++ b/date/2022-02-07.md
@@ -9,7 +9,8 @@ https://github.com/shfshanyue/Daily-Question/issues/721  [d- 699]
 
 [精读 01 js模块化的发展](https://github.com/ascoders/weekly/blob/master/%E5%89%8D%E6%B2%BF%E6%8A%80%E6%9C%AF/1.%E7%B2%BE%E8%AF%BB%E3%80%8Ajs%20%E6%A8%A1%E5%9D%97%E5%8C%96%E5%8F%91%E5%B1%95%E3%80%8B.md)
 
-[黄玄的模块化ppt](https://huangxuan.me/js-module-7day/#/81)
+[黄玄的模块化ppt](https://huangxuan.me/js-module-7day/#/5)
+
 
 [玉伯 写seajs 时谈模块化](https://github.com/seajs/seajs/issues/588)
 
@@ -17,8 +18,12 @@ https://github.com/shfshanyue/Daily-Question/issues/721  [d- 699]
 
 [JavaScript模块化编程简史（2009-2016）](https://yuguo.us/weblog/javascript-module-development-history/)
 
+
 	上文里面谈到的 umd 的概念很有意思 
-	
+
+
+# [js模块化历程](https://www.cnblogs.com/lvdabao/p/js-modules-develop.html)
+# [闲聊——浅谈前端js模块化演变](https://www.cnblogs.com/qingkong/p/5092003.html)
 [精读 204 《默认、命名导出的区别》](https://github.com/ascoders/weekly/blob/master/%E5%89%8D%E6%B2%BF%E6%8A%80%E6%9C%AF/204.%E7%B2%BE%E8%AF%BB%E3%80%8A%E9%BB%98%E8%AE%A4%E3%80%81%E5%91%BD%E5%90%8D%E5%AF%BC%E5%87%BA%E7%9A%84%E5%8C%BA%E5%88%AB%E3%80%8B.md)
 
 
