--- a/date/2022-03-04.md
+++ b/date/2022-03-04.md
@@ -1,24 +1,4 @@
 # 2022-03-04
 
-[每日一题](https://github.com/shfshanyue/Daily-Question/issues)
+[拉取pr](拉取pr.md)
 
-[精读系列](https://github.com/ascoders/weekly)
-
-
-git fetch https://gitee.com/re_tech/datart.git pull/17/head:pr_17
-
-举例
-
-长仓库地址
-
-[https://gitee.com/re_tech/datart.git](https://gitee.com/re_tech/datart.git)
-
-![0](//note.youdao.com/yws/res/e/WEBRESOURCE6a7dbd6f0b23aaad7fc4d0ab4f1e920e)
-
-git fetch https://gitee.com/re_tech/datart.git pull/17/head:pr_17
-
-git fetch upstream pull/17/head:pr_17 其中 pr_17 是自己定义的 叫 ssqqw 也是可以的
-
-git fetch reDatart pull/258/head:pr_258
-
-git fetch upstream pull/258/head:pr_258
