--- a/华为外包.md
+++ b/华为外包.md
@@ -1,3 +1,35 @@
 https://www.zhipin.com/job_detail/c07e30c8400213561XZ83960ElRV.html?ka=geek_chat_job_detail
 
 微信HR od
+
+社招机考经验
+
+第一，考试平台
+    牛客网
+第二，语言
+    根据自己擅长的自选
+第三，题目类型
+    上机编程，考试时长两个半小时
+第四，分数设置
+    总分400分，240分及格
+第五，题目设计
+    分A,B卷，每个卷子各200分
+    A卷，两道简单题，分数各100分，难度大致是力扣的简单题
+    B卷，一道题，较难，200分，难度大致是力扣的中等题
+ 第六，如何刷题
+1.刷题请在牛客做华为真题
+https://www.nowcoder.com/ta/huawei
+2.刷题范围，参考下面帖子
+https://leetcode-cn.com/circle/discuss/jAvZor/
+3.刷题原则，功能实现优先，不考复杂算法，不考性能
+第七，注意事项
+1.交了A卷才能看到B卷题目，所以选择做哪个需要谨慎一点。
+2.考试过程中，用例通过比例直接折算就是得分，所以考完就知道成绩。
+3.牛客环境中，考试使用acm模式。Acm模式的意思就是main函数基本都要自己写，使用的库看需要包含。练习过程中可以查看其他人的解法，提前准备一些模板代码。
+
+4.考试过程可以使用本地编译环境。牛客在线调试环境比较简单，可以打印调试，可以查看编译错误，没有单步调试等功能。
+5.一定记得交卷，交卷才有成绩。
+6.提前查看邮件，准备考试环境，切勿把考试拖到最后一天，结果发现环境无法不就绪，导致无法考试，考试半年内只能一次，考试链接一旦发出，有效时间七天整。
+7.注意考试环境有监控，请按照邮件说明准备考试环境。
+8.考试更多经验获取，可以参考牛客的论坛讨论。
+9.请选择常用电脑，长时间不开机，或者性能不稳定的，请慎用，避免死机或者重启
