--- a/至臻云.md
+++ b/至臻云.md
@@ -1,4 +1,9 @@
-- 2022年07月18日   微信HR
+- 2022年07月18日   微信HR  
 - 至臻云  18-23k [练手] 等消息 
 	- 自研岗位-驻场
 	- 996 面试练手
+
+vue 2.0的 相关项目  AI中台 从0到1
+面试的天津老哥   996 负责国家电网的相关事情
+约 HR 过去看看 尽量带着电脑
+
