--- a/金锐同创.md
+++ b/金锐同创.md
@@ -1,3 +1,10 @@
 金锐同创（北京）科技股份有限公司   28-35k
 
 在 HR 在沟通
+
+腾讯会议面试- 是个 3d建模的一个 技术 等其他候选人的一个考虑
+
+有说的 react 事件合成
+workerbox
+vue - compoted 和whacher 异同
+什么事函数式编程
