--- a/面试/主观面试.md
+++ b/面试/主观面试.md
@@ -2,9 +2,21 @@
 
 - 十几薪，是写在合同里的吗
 - 目前前端团队的规模
+- 后端几个  是否有 产品 UI 和测试
 - 目前的主要业务，技术栈，以及需要我来开发的功能模块
 - 
 
 我们的前端部署
 
 k8s 了解过一些概念
+
+
+
+jdbc:mysql://aliyun.internet.inxvision.com:3306/platform
+
+用户  root
+
+密码 _encrypted_E/d97N7Hb3pFKueZomi3wA==
+
+
+驱动 com.mysql.cj.jdbc.Driver
