--- a/面试/自我介绍.md
+++ b/面试/自我介绍.md
@@ -6,7 +6,11 @@
 
 
 
-immer -immtbale
+
+[immer 原理解析](https://juejin.cn/post/6926099651510665230)
+
+Redux-Thunk
+
 thunk
 styled-components
 国际化
@@ -31,6 +35,7 @@ set
 
      
 promise 的相关面试
+promise+规范
 
 flex 垂直居中 
 
