--- a/面试/面试记录.md
+++ b/面试/面试记录.md
@@ -1,26 +1,97 @@
-- 面试 中电信科
-- 面试 bano -邮件编程作业
-- 至臻云
-- 智慧足迹   ：周三 07-20 14:30
-- 人大金仓    周三   7月20号 晚上 7点面试  腾讯会议 技术面试
-- smartX  周四   7月21号 下午三点
+- 周二   下午 电话面试   中电金信 最高22K  忽略 
+- 周三 下午两点半  智慧足迹 #微信HR 刘舒  
+- 周三 下午四点  金锐同创 #微信HR   等二面  下午四点
+- 周三  下午7点  人大金仓  #微信HR  等二面  下午7点
+- 周三  下午8点 至臻云 #微信HR    可忽略 下午8点
+- 周四 下午三点  智慧足迹现场 面试  
+- 周五 上午 10点    smartX  周五   22号 上午 10点   
+- 周五 下午 5点   百度智能云 react  22号 下午 5点   🍠
+
+---
+- 周一  下午 2点半 smartX  2面  - 我觉得挺好的  余彦臻  么有考代码
+- 周一  下午 5点   人人网   飞书链接  Meeting link: https://vc.feishu.cn/j/733442033
+	- 写了一个算法 zip 算法  前端leader  redux 的知识点
+- 周一  下午6点半 电讯盈科萃锋科技    https://consoleconnect.zoom.us/j/5081429020?pwd=WTA5QzhqT3V2V0loaUtlQkJFd0h4Zz09
+	- fiber 架构
+	- webpack 版本如何去配置
+	- redux-thunk 中间件
+	- node path.join    和 path.resove的代码解读
+	- 
+- 周二  上午 8点 糖糖打预防针
+- 周二  下午2点半 boss 直聘  下午两点半 
+- 周二  下午2点半 白龙马  下午两点半 邮箱 腾讯会议  https://meeting.tencent.com/dm/fuF4uRz1Ro4Y 离职率很高 
+- 周二  下午 7点 天翼云   邮件 https://meeting.tencent.com/dm/Iw0gLKoc0Jx2   2022/07/26 19:00-20:30  
+- 周三 上午 10点   国科驾驶 微信 
+- 周三 下午 2点 牛客网   集度汽车 微信 邮箱
+- 周四 上午 10 海尔
+- 周四  下午 UItipa
+- 周五  字节面试  #微信HR   葡萄 
+
+---
 
 
+- 联通数科  等 HR反馈  微信
+- 华人运通    等 HR反馈  微信
+- 360 等联系
+- boss 直聘    再约时间了
+- shopee 等我投简历
+- 分贝通 面试邀约  题库https://www.kanzhun.com/firm/interview/detail/1nZ42dm8EFU~.html
+- 及时设计   等 HR反馈  微信
+- 海尔 智能家居 [「资深前端工程师招聘」_海尔智家用户云平台招聘-BOSS直聘 (zhipin.com)](https://www.zhipin.com/job_detail/c5dfc8682fd1676f1XZz2Ni_FlRV.html?ka=geek_chat_job_detail)
+- 广联达 等我反馈  微信
+- 九恒星 - 传统行业 -招人（北京大客户：100人）技术部分（）驻场吗？人员架构：私库10人 
+	- 混着的（ ）
+	- 公司西直门 ( )
+	- 驻场(  )
+	- 面试流程 - 2-3 轮
+	- 13薪  绩效 - 表现
 
-![[ 至臻云]]
-![[ shopee]]
-![[智慧足迹]]
-![[金锐同创]]
-![[Bano]]
-![[中电金信]]
-![[嘀嗒出行]] 
-![[人大金仓]]
+
+---
+
+
+- 人大金仓    周三   7月20号 晚上 7点面试  腾讯会议 技术面试   是个国企 挺好的 就是薪水不高
+	- 面试的一些  基础题目回答的不错 周伟 
+- 
+- 至臻云     约时间 带着电脑 去公司  🍏 天津老哥 996 12薪20K
+- 面试 中电信科     ❌  
+- 面试 bano -邮件编程作业 
+- 金锐同创  数字化 服务提供商 ：周三 07-20 下午四点    工作okr  基本不考虑了
+	- 一个比较牛的技术 3d
+
+##  智慧足迹   ：周三 07-20 14:30 ，周四下午 3点 现场  🍏  基本稳了 再谈薪资 
+16601133948
+
 ![[smartX]]
-![[联通数科]]
 ![[白龙马]]
-![[ 亿达信息]]
-![[天下秀]]
-![[集度]]等反馈
-![[[易行互动](https://www.zhipin.com/gongsir/82a6f061156691ef0HN40ti4GA~~.html "易行互动招聘")]]
-![[苹果外包]]
-![[华为外包]]
+![[人大金仓]]
+![智慧足迹](智慧足迹.md)
+
+![[ 至臻云]] 
+
+![[ shopee]]
+
+![[金锐同创]]
+
+![[Bano]]
+
+![[嘀嗒出行]] 
+
+
+
+
+
+![[联通数科]]
+
+
+
+![[百度智能云 react]]
+
+![华为外包](华为外包.md)
+
+![[广联达]]  面试约时间 HR 
+
+![[天翼云]]
+
+
+![[中电金信]]
