--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -1,1 +1,42 @@
-**一个用来表示真实DOM的对象**
+## react
+[setState](https://zhuanlan.zhihu.com/p/44537887)
+	setState(stateChange | updater [, callback])
+
+[ Vue和React对比](https://zhuanlan.zhihu.com/p/508817213)
+	相同点：数据驱动， v-dom,组件化
+	不同：数据流，数据不可变-函数式编程，生态，范式，jsx-templates
+	
+[如何看待 svelte尤雨溪 ](https://www.zhihu.com/question/53150351/answer/133912199)
+	没有运行时 框架代码
+
+[]()
+
+```js
+
+//穿行
+function p1(a) {
+  return new Promise((resolve, reject) => {
+    resolve(a * 5);
+  });
+}
+
+function p2(a) {
+  return new Promise((resolve, reject) => {
+    resolve(a * 2);
+  });
+}
+
+function f3(a) {
+ return new Promise((resolve, reject) => {
+    resolve(a * 3);
+  });
+}
+
+function p4(a) {
+  return new Promise((resolve, reject) => {
+    resolve(a * 4);
+  });
+}
+
+const pArr = [p1, p2, f3, p4];
+```
