--- a/面试/面试记录.md
+++ b/面试/面试记录.md
@@ -11,28 +11,59 @@
 - 周一  下午 2点半 smartX  2面  - 我觉得挺好的  余彦臻  么有考代码
 - 周一  下午 5点   人人网   飞书链接  Meeting link: https://vc.feishu.cn/j/733442033
 	- 写了一个算法 zip 算法  前端leader  redux 的知识点
+	- 
 - 周一  下午6点半 电讯盈科萃锋科技    https://consoleconnect.zoom.us/j/5081429020?pwd=WTA5QzhqT3V2V0loaUtlQkJFd0h4Zz09
 	- fiber 架构
 	- webpack 版本如何去配置
 	- redux-thunk 中间件
 	- node path.join    和 path.resove的代码解读
-	- 
+- //
 - 周二  上午 8点 糖糖打预防针
-- 周二  下午2点半 boss 直聘  下午两点半 
-- 周二  下午2点半 白龙马  下午两点半 邮箱 腾讯会议  https://meeting.tencent.com/dm/fuF4uRz1Ro4Y 离职率很高 
-- 周二  下午 7点 天翼云   邮件 https://meeting.tencent.com/dm/Iw0gLKoc0Jx2   2022/07/26 19:00-20:30  
-- 周三 上午 10点   国科驾驶 微信 
-- 周三 下午 2点 牛客网   集度汽车 微信 邮箱
-- 周四 上午 10 海尔
-- 周四  下午 UItipa
-- 周五  字节面试  #微信HR   葡萄 
+- 周二  下午2点半 boss 直聘  https://meeting.tencent.com/dm/v47A9BzHatjY
+	- promise规范
+	- react 事件合成
+	- https://codesandbox.io/s/react-portals-l0sy5
+		- React Portal
+		- 
+- 周二  下午 7点-8.5 天翼云   邮件 https://meeting.tencent.com/dm/Iw0gLKoc0Jx2    
+- //
+- 周三 上午 10点   国科驾驶 微信   [估计过不了]
+	- 闭包的应用
+	- 工程化的理解
+	- promise带来了什么  他的规范
+	- hooks原理的理解
+	- json 扁平化
+	- 
+- 周三 下午 2点     集度汽车 微信 邮箱  28K
+	- promise 
+	- 字符串的操作
+- 周三 下午 5点    boss直聘 2面 https://meeting.tencent.com/dm/3yleIJQi4X2K
+	- 基本通过了
+- 周三 下午 7点    小佑科技   https://meeting.tencent.com/dm/KcHa6wmYazFj
+- //
+- 周四   上午  10   海尔 30-40
+- 周四   下午  2点 集度汽车 2面 2.30  UItipa   20-40
+- 周四   下午  4 白龙马
+- 周四   下午  7 天翼云 2面
+- //
+- 周五   下午 3点  smartX  CTO 面试
+- 周五   下午6点  字节面试  #微信HR   葡萄 
+
+//
+
 
 ---
+掌上先机   35-45K·15  25* 15    架构师D轮独角兽
+沃丰科技   35-65 * 13  高级前端 资深前端  C轮
+
 
 
 - 联通数科  等 HR反馈  微信
 - 华人运通    等 HR反馈  微信
 - 360 等联系
+- 快手
+- 滴滴
+- 小红书
 - boss 直聘    再约时间了
 - shopee 等我投简历
 - 分贝通 面试邀约  题库https://www.kanzhun.com/firm/interview/detail/1nZ42dm8EFU~.html
