--- a/面试/面试记录.md
+++ b/面试/面试记录.md
@@ -12,20 +12,20 @@
 - 周一  下午 5点   人人网   飞书链接  Meeting link: https://vc.feishu.cn/j/733442033
 	- 写了一个算法 zip 算法  前端leader  redux 的知识点
 	- 
-- 周一  下午6点半 电讯盈科萃锋科技    https://consoleconnect.zoom.us/j/5081429020?pwd=WTA5QzhqT3V2V0loaUtlQkJFd0h4Zz09
+- 周一  下午6点半 电讯盈科萃锋科技 zoom
 	- fiber 架构
 	- webpack 版本如何去配置
 	- redux-thunk 中间件
 	- node path.join    和 path.resove的代码解读
 - //
 - 周二  上午 8点 糖糖打预防针
-- 周二  下午2点半 boss 直聘  https://meeting.tencent.com/dm/v47A9BzHatjY
+- 周二  下午2点半 boss 直聘  
 	- promise规范
 	- react 事件合成
 	- https://codesandbox.io/s/react-portals-l0sy5
-		- React Portal
+		- React Portal 传送门
 		- 
-- 周二  下午 7点-8.5 天翼云   邮件 https://meeting.tencent.com/dm/Iw0gLKoc0Jx2    
+- 周二  下午 7点-8.5 天翼云   邮件   
 - //
 - 周三 上午 10点   国科驾驶 微信   [估计过不了]
 	- 闭包的应用
@@ -37,24 +37,38 @@
 - 周三 下午 2点     集度汽车 微信 邮箱  28K
 	- promise 
 	- 字符串的操作
-- 周三 下午 5点    boss直聘 2面 https://meeting.tencent.com/dm/3yleIJQi4X2K
+	- 给定一个字符串，找出最长的不具有重复字符的子串的长度。例如，“abcabcbb”不具有重复字符的最长子串是“abc”，长度为3。对于“bbbbb”，最长的不具有重复字符的子串是“b”，长度为1。
+	- webpack 的优化
+
+- 周三 下午 5点    boss直聘 2面
 	- 基本通过了
-- 周三 下午 7点    小佑科技   https://meeting.tencent.com/dm/KcHa6wmYazFj
+- 周三 下午 7点    小佑科技
+	- 很一般
 - //
 - 周四   上午  10   海尔 30-40
-- 周四   下午  2点 集度汽车 2面 2.30  UItipa   20-40
-- 周四   下午  4 白龙马
-- 周四   下午  7 天翼云 2面
+	- [「资深前端工程师招聘」_海尔智家用户云平台招聘-BOSS直聘 (zhipin.com)](https://www.zhipin.com/job_detail/c5dfc8682fd1676f1XZz2Ni_FlRV.html?ka=geek_chat_job_detail)
+	- 回答的还可以
+- 周四   下午  2点  集度汽车 2面 通过了
+- 周四   下午  4.5  白龙马  估计能过
+	- 考察promise
+- 周四   下午  7 天翼云 2面 面试官迟到- 谈项目经验 过了  他在上海  研发一部
 - //
-- 周五   下午 3点  smartX  CTO 面试
+- 周五 上午 10  联通云  1面  腾讯会议：  715-499-831
+- 周五   下午 3点  smartX 3面  CTO 面试  完成了没有考代码
 - 周五   下午6点  字节面试  #微信HR   葡萄 
 
-//
-
-
 ---
-掌上先机   35-45K·15  25* 15    架构师D轮独角兽
-沃丰科技   35-65 * 13  高级前端 资深前端  C轮
+周一  上午10  掌上先机 1面    35-45K·15  25* 15    架构师D轮独角兽 https://work.weixin.qq.com/webapp/tm/PcHXinfqyXe
+周一   下午 2点 高途  一面 955-154-977
+周一   下午 4点  boss直聘 三面  https://meeting.tencent.com/dm/ER44SlxhybkO
+//
+周二   上午 11点 集度汽车 3面 HR 
+周二    取消  下午3点  沃丰科技 1面  35-65 * 13  高级前端 资深前端  C轮  https://meeting.tencent.com/dm/IUCdN6QFyZGL
+周二  下午4.30    天翼云  3面      https://meeting.tencent.com/dm/qDj9RpxWYPZC   
+//
+周三  上午10点  2面  海尔团队负责人-总监 https://vc.feishu.cn/j/507216215
+
+周二： 2.30  UItipa   20-40%%%%
 
 
 
@@ -68,7 +82,6 @@
 - shopee 等我投简历
 - 分贝通 面试邀约  题库https://www.kanzhun.com/firm/interview/detail/1nZ42dm8EFU~.html
 - 及时设计   等 HR反馈  微信
-- 海尔 智能家居 [「资深前端工程师招聘」_海尔智家用户云平台招聘-BOSS直聘 (zhipin.com)](https://www.zhipin.com/job_detail/c5dfc8682fd1676f1XZz2Ni_FlRV.html?ka=geek_chat_job_detail)
 - 广联达 等我反馈  微信
 - 九恒星 - 传统行业 -招人（北京大客户：100人）技术部分（）驻场吗？人员架构：私库10人 
 	- 混着的（ ）
