--- a/date/2022-07-29.md
+++ b/date/2022-07-29.md
@@ -1,2 +1,5 @@
 # 2022-07-29
 
+好 最近买了您的一对一辅导课。本来想着好好总结和您进行一次谈话，让您指导一下我未来怎么提高自己呢。结果公司突然 宣布公司融资失败，即将宣告破产。 这时候我只能先忙着找工作,没有和您建立一个沟通。
+
+我这里先说一下我的基本情况。我1991年
