--- a/面试/面试记录.md
+++ b/面试/面试记录.md
@@ -1,3 +1,44 @@
+汇总 
+
+智慧足迹    offer          30 * 14  =    42W         8.8入职   联通子公司                大悦城
+
+集度汽车   即将HR面   2,4 * 16  =   32W- 64W   百度新能源汽车  未来感        立水桥  34 * 16.5 = 55W
+天翼云       即将3面     2,4 * 15  =   32W-60W    可能忙点-末位淘汰  平台大   电信博物馆或者苏州街 
+boss直聘   即将三面   3,6  * 16  =   48 W+          10105  加班    给的多            西直门    55W
+海尔智能    即将2面    3,4  * 15  =   45W+                                                           北土城
+高途 
+掌上先机
+
+联通云       即将二面    
+
+smartX      3面通过      2,3 * 16  =  40W-48W     C轮 小而美 技术氛围好         知春路
+
+--- 
+UItipa 
+
+周一  上午10  掌上先机 1面    35-45K·15  25* 15    架构师D轮独角兽 https://work.weixin.qq.com/webapp/tm/PcHXinfqyXe
+	给定一个String：'a(3)b(1)cde(2)f(0)'，期望输出结果：'aaabcdee'。
+	vue和 react 最大的区别和相同点是什么 
+周一   下午 2点 高途  一面  // nv leader 
+周一   下午 4点  boss直聘 三面  https://meeting.tencent.com/dm/ER44SlxhybkO 
+周二   上午 11点 集度汽车 3面 HR 
+
+周二  下午4.30    天翼云  3面      https://meeting.tencent.com/dm/qDj9RpxWYPZC   
+周二   下午 6点  掌上先机 2面     942-231-057
+
+周三  上午10点  2面  海尔团队负责人-总监 https://vc.feishu.cn/j/507216215  
+周三  下午 没有面试   等集度 offer反馈 等 boss直聘反馈
+周四  上午 没有面试   等集度 offer反馈 等 boss直聘反馈
+周四  下午 17:45   沃丰科技  1面  
+
+周五 11点 高途 2面  等集度 offer反馈 等 boss直聘反馈
+周五 下午 三一重工  等集度 offer反馈 等 boss直聘反馈
+周五上午 通知智慧足迹  要不要去  
+
+
+
+-----
+
 - 周二   下午 电话面试   中电金信 最高22K  忽略 
 - 周三 下午两点半  智慧足迹 #微信HR 刘舒  
 - 周三 下午四点  金锐同创 #微信HR   等二面  下午四点
@@ -58,17 +99,6 @@
 - 周五   下午6点  字节面试  #微信HR   葡萄 
 
 ---
-周一  上午10  掌上先机 1面    35-45K·15  25* 15    架构师D轮独角兽 https://work.weixin.qq.com/webapp/tm/PcHXinfqyXe
-周一   下午 2点 高途  一面 955-154-977
-周一   下午 4点  boss直聘 三面  https://meeting.tencent.com/dm/ER44SlxhybkO
-//
-周二   上午 11点 集度汽车 3面 HR 
-周二    取消  下午3点  沃丰科技 1面  35-65 * 13  高级前端 资深前端  C轮  https://meeting.tencent.com/dm/IUCdN6QFyZGL
-周二  下午4.30    天翼云  3面      https://meeting.tencent.com/dm/qDj9RpxWYPZC   
-//
-周三  上午10点  2面  海尔团队负责人-总监 https://vc.feishu.cn/j/507216215
-
-周二： 2.30  UItipa   20-40%%%%
 
 
 
