--- a/面试/面试记录.md
+++ b/面试/面试记录.md
@@ -1,16 +1,18 @@
 汇总 
 
 智慧足迹    offer          30 * 14  =    42W         8.8入职   联通子公司                大悦城
-
 集度汽车   即将HR面   2,4 * 16  =   32W- 64W   百度新能源汽车  未来感        立水桥  34 * 16.5 = 55W
-天翼云       即将3面     2,4 * 15  =   32W-60W    可能忙点-末位淘汰  平台大   电信博物馆或者苏州街 
 boss直聘   即将三面   3,6  * 16  =   48 W+          10105  加班    给的多            西直门    55W
+
+天翼云       即将3面     2,4 * 15  =   32W-60W    可能忙点-末位淘汰  平台大   电信博物馆或者苏州街 
 海尔智能    即将2面    3,4  * 15  =   45W+                                                           北土城
+
 高途 
-掌上先机
+沃丰科技
+三一重工
 
-联通云       即将二面    
-
+掌上先机    估计悬了
+联通云       即将二面     估计悬了
 smartX      3面通过      2,3 * 16  =  40W-48W     C轮 小而美 技术氛围好         知春路
 
 --- 
@@ -27,12 +29,23 @@ UItipa
 周二   下午 6点  掌上先机 2面     942-231-057
 
 周三  上午10点  2面  海尔团队负责人-总监 https://vc.feishu.cn/j/507216215  
+	杨军库-面试官
+	
 周三  下午 没有面试   等集度 offer反馈 等 boss直聘反馈
+
 周四  上午 没有面试   等集度 offer反馈 等 boss直聘反馈
-周四  下午 17:45   沃丰科技  1面  
+周四   下午  2点     boss HRBP 面试 https://meeting.tencent.com/dm/18WZ4TMHia6P 
+          下午  2:45   沃丰科技  1面   - https://meeting.tencent.com/dm/IUCdN6QFyZGL
+
 
 周五 11点 高途 2面  等集度 offer反馈 等 boss直聘反馈
-周五 下午 三一重工  等集度 offer反馈 等 boss直聘反馈
+周五 下午 2.5 三一重工   等集度 offer反馈 等 boss直聘反馈
+周五 下午  4点  天翼云 
+		下午  5点半   百度 
+		 中国联通数科  央企 - 8个人- 3   1到2 人 数据可视化-低代码
+         
+         
+
 周五上午 通知智慧足迹  要不要去  
 
 
@@ -47,6 +60,7 @@ UItipa
 - 周四 下午三点  智慧足迹现场 面试  
 - 周五 上午 10点    smartX  周五   22号 上午 10点   
 - 周五 下午 5点   百度智能云 react  22号 下午 5点   🍠
+	- 对象扁平化
 
 ---
 - 周一  下午 2点半 smartX  2面  - 我觉得挺好的  余彦臻  么有考代码
@@ -94,9 +108,12 @@ UItipa
 	- 考察promise
 - 周四   下午  7 天翼云 2面 面试官迟到- 谈项目经验 过了  他在上海  研发一部
 - //
-- 周五 上午 10  联通云  1面  腾讯会议：  715-499-831
+- 周五 上午 10  联通云  1面  腾讯会议
 - 周五   下午 3点  smartX 3面  CTO 面试  完成了没有考代码
 - 周五   下午6点  字节面试  #微信HR   葡萄 
+	- 手写hook 鼠标点的坐标
+	- listTotree
+	- 
 
 ---
 
@@ -105,20 +122,16 @@ UItipa
 - 联通数科  等 HR反馈  微信
 - 华人运通    等 HR反馈  微信
 - 360 等联系
-- 快手
-- 滴滴
-- 小红书
-- boss 直聘    再约时间了
-- shopee 等我投简历
+- 快手 
+- 滴滴 
+- 小红书 
+- boss 直聘    再约时间了 
+- shopee 等我投简历 
 - 分贝通 面试邀约  题库https://www.kanzhun.com/firm/interview/detail/1nZ42dm8EFU~.html
-- 及时设计   等 HR反馈  微信
-- 广联达 等我反馈  微信
-- 九恒星 - 传统行业 -招人（北京大客户：100人）技术部分（）驻场吗？人员架构：私库10人 
-	- 混着的（ ）
-	- 公司西直门 ( )
-	- 驻场(  )
-	- 面试流程 - 2-3 轮
-	- 13薪  绩效 - 表现
+- 及时设计   等 HR反馈  微信 
+- 广联达 等我反馈  微信 
+- 元年科技
+
 
 
 ---
