--- a/面试/面试记录.md
+++ b/面试/面试记录.md
@@ -1,3 +1,12 @@
+36 * 16 =  57.6       36 * 15= 54         36* 14=50.4
+35 * 16 =  56.0       35* 15 =52.5       35* 14=49
+34 * 16 =  54.4       34 * 15= 510       34* 14=47.6 
+
+
+
+
+
+
 汇总 
 
 智慧足迹    offer          30 * 14  =    42W         8.8入职   联通子公司                大悦城
@@ -35,20 +44,23 @@ UItipa
 
 周四  上午 没有面试   等集度 offer反馈 等 boss直聘反馈
 周四   下午  2点     boss HRBP 面试 https://meeting.tencent.com/dm/18WZ4TMHia6P 
-          下午  2:45   沃丰科技  1面   - https://meeting.tencent.com/dm/IUCdN6QFyZGL
+          下午  3.20  微信 中国联通  中国联通数科  央企 - 8个人- 3   1到2 人 数据可视化-低代码
 
 
 周五 11点 高途 2面  等集度 offer反馈 等 boss直聘反馈
+
 周五 下午 2.5 三一重工   等集度 offer反馈 等 boss直聘反馈
+
 周五 下午  4点  天翼云 
-		下午  5点半   百度 
-		 中国联通数科  央企 - 8个人- 3   1到2 人 数据可视化-低代码
+
+下午  5点半   百度 
+		 
          
          
 
 周五上午 通知智慧足迹  要不要去  
 
-
+周六  下午  沃丰科技
 
 -----
 
