--- a/面试/面试记录.md
+++ b/面试/面试记录.md
@@ -3,25 +3,25 @@
 34 * 16 =  54.4       34 * 15= 510       34* 14=47.6 
 
 
-
-
-
-
 汇总 
 
-智慧足迹    offer          30 * 14  =    42W         8.8入职   联通子公司                大悦城
-集度汽车   即将HR面   2,4 * 16  =   32W- 64W   百度新能源汽车  未来感        立水桥  34 * 16.5 = 55W
-boss直聘   即将三面   3,6  * 16  =   48 W+          10105  加班    给的多            西直门    55W
+智慧足迹    offer               30 * 14  =    42W         8.8入职   联通子公司                大悦城
+集度汽车    offer流程        2,4 * 16  =   32W- 64W   百度新能源汽车  未来感        立水桥  34 * 16.5 = 55W
+海尔智能    offer流程        3,4  * 15  =   45W+                                                           北土城
+boss直聘   等HRBP流程   3,6  * 16  =   48 W+          10105  加班    给的多            西直门    55W
+高途          可能 HR面        45* 1.25 =  56W 
+天翼云       即将3面           2,4 * 15  =   32W-60W    可能忙点-末位淘汰  平台大   电信博物馆或者苏州街 
+联通数科   可能会2面       猎头的估值
 
-天翼云       即将3面     2,4 * 15  =   32W-60W    可能忙点-末位淘汰  平台大   电信博物馆或者苏州街 
-海尔智能    即将2面    3,4  * 15  =   45W+                                                           北土城
 
-高途 
-沃丰科技
 三一重工
+百度
+沃丰科技
 
-掌上先机    估计悬了
+
+
 联通云       即将二面     估计悬了
+掌上先机    估计悬了
 smartX      3面通过      2,3 * 16  =  40W-48W     C轮 小而美 技术氛围好         知春路
 
 --- 
@@ -47,9 +47,9 @@ UItipa
           下午  3.20  微信 中国联通  中国联通数科  央企 - 8个人- 3   1到2 人 数据可视化-低代码
 
 
-周五 11点 高途 2面  等集度 offer反馈 等 boss直聘反馈
+周五 11点 高途 2面  等集度 offer反馈 等 boss直聘反馈 等海尔反馈
 
-周五 下午 2.5 三一重工   等集度 offer反馈 等 boss直聘反馈
+周五 下午 2.5 三一重工   等 集度，海尔，boss直聘，联通数科，
 
 周五 下午  4点  天翼云 
 
