--- a/面试/面试记录.md
+++ b/面试/面试记录.md
@@ -5,24 +5,30 @@
 
 汇总 
 
-智慧足迹    offer               30 * 14  =    42W         8.8入职   联通子公司                大悦城
-集度汽车    offer流程        2,4 * 16  =   32W- 64W   百度新能源汽车  未来感        立水桥  34 * 16.5 = 55W
-海尔智能    offer流程        3,4  * 15  =   45W+                                                           北土城
-boss直聘   等HRBP流程   3,6  * 16  =   48 W+          10105  加班    给的多            西直门    55W
-高途          可能 HR面        45* 1.25 =  56W 
-天翼云       即将3面           2,4 * 15  =   32W-60W    可能忙点-末位淘汰  平台大   电信博物馆或者苏州街 
-联通数科   可能会2面       猎头的估值
+智慧足迹       已经 offer          30 * 14  =    42W         8.8入职   联通子公司                大悦城
+集度汽车       offer流程           2,4 * 16  =   32W- 64W   百度       立水桥  34 * 16.5 = 55W
+boss直聘      HRBP流程          3,6  * 16  =   48 W+          10105  加班    给的多            西直门    55W
+天翼云          3面通过等HR     2,4 * 15  =   32W-60W    可能忙点-末位淘汰  平台大   电信博物馆或者苏州街
 
-
-三一重工
-百度
-沃丰科技
+中华财险 北京平台 - react umi 
+联通数科      可能会2面          猎头的估值 
+百度            周五下午  2点到3点 
+沃丰科技   周四  10  -  10.45
 
 
 
-联通云       即将二面     估计悬了
-掌上先机    估计悬了
-smartX      3面通过      2,3 * 16  =  40W-48W     C轮 小而美 技术氛围好         知春路
+高途             下周二再聊         45* 1.25 =  56W        35.3 * 15= 53（谈薪资）
+
+
+
+
+
+
+联通云         二面     
+掌上先机     2面 面试官 不行
+smartX       3面通过      2,3 * 16  =  40W-48W     C轮 小而美 技术氛围好         知春路   不匹配
+海尔智能     offer流程           3,4  * 15  =   45W+                          锁HC                                      北土城
+三一重工     岗位不匹配 等通知  
 
 --- 
 UItipa 
